  TEZ-3555. Tez UI: Build is failing in RHEL6
  TEZ-3570. Tez UI: Wait for sometime before tooltips are displayed
  TEZ-3504. Tez UI: Duration is displaying invalid values when start or end time is invalid
  TEZ-3529. Tez UI: Add 'All Queries' table in the landing page along 'All DAGs' page
  TEZ-3530. Tez UI: Add query details page, and link the page from All Queries table

Release 0.8.5: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3574. Container reuse won't pickup extra dag level local resource.
  TEZ-3566. Avoid caching fs isntances in TokenCache after a point.
  TEZ-3568. Update SecurityUtils configuration to pick user provided configuration.
  TEZ-3559. TEZ_LIB_URIS doesn't work with schemes different than the defaultFS
  TEZ-3549. TaskAttemptImpl does not initialize TEZ_TASK_PROGRESS_STUCK_INTERVAL_MS correctly
  TEZ-3537. ArrayIndexOutOfBoundsException with empty environment variables/Port YARN-3768 to Tez
  TEZ-3536. NPE in WebUIService start when host resolution fails.
  TEZ-3534. Differentiate thread names on Fetchers, minor changes to shuffle shutdown code.
  TEZ-3491. Tez job can hang due to container priority inversion.
  TEZ-3533. ShuffleScheduler should shutdown threadpool on exit.
  TEZ-3493. DAG submit timeout cannot be set to a month
  TEZ-3505. Move license to the file header for TezBytesWritableSerialization
  TEZ-3486. COMBINE_OUTPUT_RECORDS/COMBINE_INPUT_RECORDS are not correct
  TEZ-3097. Flaky test: TestCommit.testDAGCommitStartedEventFail_OnDAGSuccess.
  TEZ-3437. Improve synchronization and the progress report behavior for Inputs from TEZ-3317.
  TEZ-3317. Speculative execution starts too early due to 0 progress.
  TEZ-3452. Auto-reduce parallelism calculation can overflow with large inputs
  TEZ-3439. Tez joinvalidate fails when first input argument size is bigger than the second.
  TEZ-3464. Fix findbugs warnings in tez-dag mainLoop
  TEZ-3330. Propagate additional config parameters when running MR jobs via Tez.