@@ -41,7 +41,7 @@
 
   .search-element {
     display: inline-block;
-    width: 33.3%;
+    width: 12.5%;
 
     vertical-align: top;
 
@@ -60,10 +60,10 @@
   }
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1300px) {
   .queries-page-search{
     float: left;
-    width: 50%;
+    width: 80%;
 
     .form-group {
       margin-bottom: 0px;
