@@ -34,8 +34,48 @@
     enter="search"
     }}
   </div><div class="search-element">
-    <label for="pwd">Request User:</label>
-    {{input value=requestUser
+    <label for="pwd">DAG ID:</label>
+    {{input value=dagID
+    type="text"
+    class="form-control input-sm"
+    placeholder="Search..."
+    enter="search"
+    }}
+  </div><div class="search-element">
+    <label for="pwd">Tables Read:</label>
+    {{input value=tablesRead
+    type="text"
+    class="form-control input-sm"
+    placeholder="Search..."
+    enter="search"
+    }}
+  </div><div class="search-element">
+    <label for="pwd">Tables Written:</label>
+    {{input value=tablesWritten
+    type="text"
+    class="form-control input-sm"
+    placeholder="Search..."
+    enter="search"
+    }}
+  </div><div class="search-element">
+    <label for="pwd">App ID:</label>
+    {{input value=appID
+    type="text"
+    class="form-control input-sm"
+    placeholder="Search..."
+    enter="search"
+    }}
+  </div><div class="search-element">
+    <label for="pwd">Queue:</label>
+    {{input value=queue
+    type="text"
+    class="form-control input-sm"
+    placeholder="Search..."
+    enter="search"
+    }}
+  </div><div class="search-element">
+    <label for="pwd">Execution Mode:</label>
+    {{input value=executionMode
     type="text"
     class="form-control input-sm"
     placeholder="Search..."
