@@ -165,6 +165,7 @@ ALL CHANGES:
   TEZ-3504. Tez UI: Duration is displaying invalid values when start or end time is invalid
   TEZ-3529. Tez UI: Add 'All Queries' table in the landing page along 'All DAGs' page
   TEZ-3530. Tez UI: Add query details page, and link the page from All Queries table
+  TEZ-3531. Tez UI: All Queries table: Improve searchability
 
 Release 0.8.5: Unreleased
 
